--- a/Project part 1/bigfoot.html
+++ b/Project part 1/bigfoot.html
@@ -18,7 +18,7 @@
       <div align="center">
         <li><a href="index.html">Home</a></li>
         <li><a href="chupacabra.html">Chupacabra</a></li>
-        <li><a href="#">Loch Ness</a></li>
+        <li><a href="lochness.html">Loch Ness</a></li>
         <li><a href="bigfoot.html">Bigfoot</a></li>
       </div>
     </ul>
@@ -26,8 +26,8 @@
 
   <section id="bf1">
     <p> Bigfoot also known as Sasquatch is an ape like creature that is said to resemble bipedal humanoids.<br>
-      <p> Bigfoot is believed to inhabit forests in the Pacific Northwest region of the United States.<br>
-        <p>
+      <p> Bigfoot is believed to inhabit forests in the Pacific Northwest region of the United States. In 1965<br>
+        <p> Bigfoot was put on the engangered species list by Russia<br>
   </section>
 
   <div class="bfImg">
