--- a/Project part 1/index.html
+++ b/Project part 1/index.html
@@ -18,7 +18,7 @@
         <div align="center">
           <li><a href="index.html">Home</a></li>
           <li><a href="chupacabra.html">Chupacabra</a></li>
-          <li><a href="#">Loch Ness</a></li>
+          <li><a href="lochness.html">Loch Ness</a></li>
           <li><a href="bigfoot.html">Bigfoot</a></li>
         </div>
       </ul>
