--- a/Project part 1/chupacabra.html
+++ b/Project part 1/chupacabra.html
@@ -17,18 +17,25 @@
     <ul class="Nav">
       <div align="center">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Chupacabra</a></li>
-        <li><a href="#">Loch Ness</a></li>
-        <li><a href="#">Bigfoot</a></li>
+        <li><a href="chupacabra.html">Chupacabra</a></li>
+        <li><a href="lochness.html">Loch Ness</a></li>
+        <li><a href="bigfoot.html">Bigfoot</a></li>
       </div>
     </ul>
   </header>
 
-  <p> A cryptid is a creature whose existence has been suggested but not proven.<br>
-  <p> They often appear in folklore and myths like the Chupacabra and the Jersey Devil <br>
-  <p> Some of the most commonly known cryptids are Bigfoot, Loch Ness Monster, and the Chupacabra.
+  <section id="c1">
+    <p> The Chupacabra is a creature from South American folklore that is also known as<br>
+      <p> the goat sucker. The first supposed sightings of this creature were in Puerto<br>
+        <p> Rico during the mid 90s. The Chupacabra is most commonly described as being a<br>
+          <p> reptile like creature with spines running down its back. However there is also<br>
+            <p> another description of it looking more like a breed of dog with pronounced spines<br>
+              <p> running down its back. 
+  </section>
 
-
+  <div class="cImg">
+    <img src="./img/chupa.png" alt="chupacabra" height="350" width="400">
+  </div>
 
 
   <footer> A site by Matthew Strayhorn </footer>
